kubernetes/manifests/adventurelog/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adventurelog
  labels:
    name: adventurelog
