kubernetes/manifests/adventurelog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-name
  labels:
    app: adventure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adventure
  template:
    metadata:
      name: adventure
      labels:
        app: adventure
    spec:
      volumes:
      - name: adventure-journal
        persistentVolumeClaim:
          claimName: adventure-journal-pvc
      containers:
      - name: adventure-frontend
        image: ghcr.io/seanmorley15/adventurelog-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-name
  labels:
    app: adventure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adventure
  template:
    metadata:
      name: adventure
      labels:
        app: adventure
    spec:
      containers:
      - name: adventure-backend
        image: ghcr.io/seanmorley15/adventurelog-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        - containerPort: 8000
        volumeMounts:
        - name: adventure-journal
          mountPath: /code/media
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  selector:
    app: adventure
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: base
    protocol: TCP
    port: 8000
    targetPort: 8000
